# rl-workshop

./: README.md  dataset.py  main.py  model.py  pyproject.toml  solvers.py
Ice_RF/: 001_q_lerning_class.py  002_upper_confidence_bound.py  003_thompson_bandit.py  bandit.py
Reinforcement-Learning-on-FrozenLake-master/: simplest.py
day1/: bandit.py
optimization_models/: dataset.py  main.py  model.py  solvers.py  train.py
